--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,5 +1,5 @@
 nav{
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255,255,255,0.99);
 }
 #sobremain{
     margin-top: 200px;
@@ -67,12 +67,13 @@ nav{
 .s_stxt{
     font-family: Poppins;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 18px;
     color: rgb(251,118,96);
     margin-bottom: 10px;
 }
 .s_txt, .s_txt2{
-    font-size: 14px;
+    font-size: 16px;
+    line-height: 20px;
 }
 .s_txt2{
     margin-bottom: 30px;
