--- a/css/ageifrm.css
+++ b/css/ageifrm.css
@@ -34,6 +34,9 @@
     margin:30px 0px 0px 20px;
     color: rgb(255,255,255);
     font-size: 16px;
+    left: 0%;
+    top: 0%;
+    transform: translate(-0%,-0%);
     z-index: 5;
     position: absolute;
 }
