--- a/css/home.css
+++ b/css/home.css
@@ -494,9 +494,12 @@ nav.scroll{
     font-weight: 600;
 }
 .hmain_adate{
-    margin:40px 0px 0px 20px;
+    margin:30px 0px 0px 20px;
     color: rgb(255,255,255);
     font-size: 20px;
+    left: 0%;
+    top: 0%;
+    transform: translate(-0%,-0%);
     z-index: 5;
     position: absolute;
 }
