--- a/css/sobre.css
+++ b/css/sobre.css
@@ -66,10 +66,14 @@ nav{
 }
 .s_stxt{
     font-family: Poppins;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 18px;
     color: rgb(251,118,96);
     margin-bottom: 10px;
+    -webkit-transition: font-weight 0.4s ease;
+    -moz-transition: font-weight 0.2s ease;
+    -o-transition: font-weight 0.2s ease;
+    transition: font-weight 0.2s ease;
 }
 .s_txt, .s_txt2{
     font-size: 16px;
@@ -78,7 +82,9 @@ nav{
 .s_txt2{
     margin-bottom: 30px;
 }
-
+.s_stxt:hover,.s_stxt:focus,.s_stxt:active{
+    font-weight:600; 
+}
 .etap_hold{
     margin-left: 490px;
     margin-bottom: 100px;
