--- a/css/home.css
+++ b/css/home.css
@@ -154,16 +154,19 @@ nav.scroll{
     width: 100%;
     position:relative;
     box-sizing: border-box;
-    justify-content: center;
-    align-items: center;
     background-color: rgb(30,30,30);
     background-image: url(img/trent-erwin-338084.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     display: -webkit-flex;
+    -webkit-flex-direction: row;
     -webkit-justify-content: center;
+    -webkit-align-items: center;
 }
 .vid_wrap{
     height: 100vh;
