--- a/css/ageifrm.css
+++ b/css/ageifrm.css
@@ -22,15 +22,31 @@
     margin-bottom: 10px;
     width: 220px;
     height:200px;
+    position: relative;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
 }
-.ifrm_date,.ifrm_titl{
-    font-family: poppins;
-    font-weight: 600;
+.ifrm_over{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 5;
+    top: 0;
+    left: 0;
+    transform: translate(0%,0%);
+    background-color: rgba(251,118,96, 0);
+    -webkit-transition: background-color 0.2s ease;
+    -moz-transition: background-color 0.2s ease;
+    -o-transition: background-color 0.2s ease;
+    transition: background-color 0.2s ease;
+}
+.ifrm_box:hover .ifrm_over{
+    background-color: rgba(251,118,96, 0.4);
 }
 .ifrm_date{
+    font-family: poppins;
+    font-weight: 400;
     margin:30px 0px 0px 20px;
     color: rgb(255,255,255);
     font-size: 16px;
@@ -39,9 +55,18 @@
     transform: translate(-0%,-0%);
     z-index: 5;
     position: absolute;
+    -webkit-transition: font-weightr 0.2s ease;
+    -moz-transition: font-weight 0.2s ease;
+    -o-transition: font-weight 0.2s ease;
+    transition: font-weight 0.2s ease;
 }
 .ifrm_titl{
+    font-family: poppins;
+    font-weight: 600;
     font-size: 18px;
     color: rgb(251,118,96);
     margin-bottom: 6px;
+}
+.ifrm_box:hover .ifrm_date{
+    font-weight: 600
 }
